--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- <div id="app"></div> -->
-    <h1 class="text-4xl m-2">Coucou</h1>
+    <h1 id="appear" class="text-4xl m-2">Coucou</h1>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
