Ajouter un titre en gras et modifier l'opacité de l'élément apparaissant

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <!-- <div id="app"></div> -->
     <h1 id="appear" class="text-4xl m-2">Coucou</h1>
+    <h2 id="bold" class="text-3xl m-2">bold</h2>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
