--- a/index.html
+++ b/index.html
@@ -11,6 +11,51 @@
     <!-- <div id="app"></div> -->
     <h1 id="appear" class="text-4xl m-2">Coucou</h1>
     <h2 id="bold" class="text-3xl m-2">bold</h2>
+    <p id="txtmodify" class="m-2">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
+      nesciunt officia, possimus amet eos alias nostrum? Asperiores non aperiam
+      ad minus, delectus quidem esse voluptatibus earum praesentium quam debitis
+      id!
+    </p>
+    <!--  -->
+    <div id="cards" class="flex justify-center gap-4 mt-4">
+      <div
+        class="card p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md"
+      >
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">
+          Card 1
+        </h5>
+        <p class="font-normal text-gray-700">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </div>
+
+      <div
+        class="card p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md"
+      >
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">
+          Card 2
+        </h5>
+        <p class="font-normal text-gray-700">
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+          nisi ut aliquip ex ea commodo consequat.
+        </p>
+      </div>
+
+      <div
+        class="card p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md"
+      >
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">
+          Card 3
+        </h5>
+        <p class="font-normal text-gray-700">
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+          dolore eu fugiat nulla pariatur.
+        </p>
+      </div>
+    </div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
